--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,8 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.9'
+          - '1.9.0-beta3'
+          - '1.8'
           - 'nightly'
         os:
           - ubuntu-latest
