--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
+Distributions = "0.25"
 julia = "1.8"
 
 [extras]
