--- a/Project.toml
+++ b/Project.toml
@@ -13,12 +13,12 @@ Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-Distributions = "0.25"
 DataStructures = "0.18"
-StaticArrays = "1"
-FastGaussQuadrature = "0.4"
+Distributions = "0.25"
+FastGaussQuadrature = "0.4, 0.5"
 Reexport = "1"
 Roots = "2"
+StaticArrays = "1"
 julia = "1.8"
 
 [extras]
