--- a/Project.toml
+++ b/Project.toml
@@ -8,17 +8,18 @@ DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-Distributions = "0.25"
 DataStructures = "0.18"
-StaticArrays = "1"
+Distributions = "0.25"
 FastGaussQuadrature = "0.4"
 Reexport = "1"
 Roots = "2"
+StaticArrays = "1"
 julia = "1.8"
 
 [extras]
