--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 DataStructures = "0.18"
 Distributions = "0.25"
 FastGaussQuadrature = "0.4"
+Polynomials = "3"
 Reexport = "1"
 Roots = "2"
 StaticArrays = "1"
