add build script that installs proposal

--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Christian Haack"]
 version = "0.5.0"
 
 [deps]
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
@@ -20,10 +21,10 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 DataStructures = "0.18"
 Distributions = "0.25"
 FastGaussQuadrature = "0.4, 0.5"
+Polynomials = "3"
 Reexport = "1"
 Roots = "2"
 StaticArrays = "1"
-Polynomials = "3"
 julia = "1.9"
 
 [extras]
