Update dependencies in Manifest and Project files

--- a/Project.toml
+++ b/Project.toml
@@ -22,8 +22,8 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 [compat]
 DataStructures = "0.18"
 Distributions = "0.25"
-FastGaussQuadrature = "0.4, 0.5"
-Polynomials = "3"
+FastGaussQuadrature = "0.5, 1.0"
+Polynomials = "3, 4"
 Reexport = "1"
 Roots = "2"
 StaticArrays = "1"
