--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "PhysicsTools"
 uuid = "aacfb283-0df6-49c4-85a4-270b72c3b0a9"
 authors = ["Christian Haack"]
-version = "0.5.2"
+version = "0.5.3"
 
 [deps]
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
@@ -27,7 +27,7 @@ Polynomials = "3, 4"
 Reexport = "1"
 Roots = "2"
 StaticArrays = "1"
-julia = "1.9"
+julia = "1.9, 1.10"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
