--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "PhysicsTools"
 uuid = "aacfb283-0df6-49c4-85a4-270b72c3b0a9"
 authors = ["Christian Haack"]
-version = "0.8.0"
+version = "0.8.1"
 
 [deps]
 CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
@@ -21,14 +21,12 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
-DataStructures = "0.18"
-Distributions = "0.25"
 FastGaussQuadrature = "0.4, 0.5, 1.0"
 Polynomials = "3, 4"
 Reexport = "1"
 Roots = "2"
 StaticArrays = "1"
-julia = "1.9, 1.10"
+julia = "1.9, 1.10, 1.11"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
